# app/Models/InvoiceLine.php
@@ -9,12 +9,23 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 class InvoiceLine extends Model
 {
     use HasFactory;
-    protected $fillable = ['invoice_id', 'description', 'amount'];
+    //protected $fillable = ['invoice_id', 'description', 'amount'];
+
+    protected $fillable = [
+        'invoice_id',
+        'description',
+        'quantity',
+        'unit_price',
+    ];
 
     protected $casts = [
         'created_at' => 'datetime',
         'updated_at' => 'datetime',
+        'quantity' => 'integer',
+        'unit_price' => 'decimal:2',
+        'total_amount' => 'decimal:2',
     ];
+
     public function invoice()
     {
         return $this->belongsTo(Invoice::class);
